examples/test/testpolicy2723.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2723
  namespace: namespace140
spec:
  podSelector:
    matchLabels:
      key17: value48
      key33: value37
      key27: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value47
          key4: value29
          key28: value46
      podSelector:
        matchLabels:
          key6: value27
          key11: value10
